--- a/portfolio.html
+++ b/portfolio.html
@@ -39,64 +39,63 @@
                 <ul class="list">
                 <li>
                     <a>
-                        <img src="images/img(4).jpg" alt="purple overlap" width="360" height="420">
+                        <img src="./images/img(4).jpg" alt="purple overlap" width="360" height="420">
                         <h2 class="headertwo">Banking App Interface Concept</h2>
                         <p class="p1">App</p>
                     </a>
                 </li>
                 <li>
                     <a>
-                        <img src="images/img(5).jpg" alt="scanning" width="360" height="420">
+                        <img src="./images/img(5).jpg" alt="scanning" width="360" height="420">
                         <h2 class="headertwo">Cashless Payment</h2>
                         <p class="p1">Marketing</p>
                     </a>
                 </li>
                 <li> 
                     <a>
-                        <img src="images/img(6).jpg" alt="Mac and iphone x" width="360" height="420">
+                        <img src="./images/img(6).jpg" alt="Mac and iphone x" width="360" height="420">
                         <h2 class="headertwo">Meditation App</h2>
                         <p class="p1">App</p>
                     </a>
                 </li>
-            <h2 class="headerthree"></h2>
                 <li>
                     <a>
-                        <img src="images/img(7).jpg" alt="Driver in car" width="360" height="420">
+                        <img src="./images/img(7).jpg" alt="Driver in car" width="360" height="420">
                         <h2>Taxi Service</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a>
-                        <img src="images/img(8).jpg" alt="Scanning code qr" width="360" height="420">
+                        <img src="./images/img(8).jpg" alt="Scanning code qr" width="360" height="420">
                         <h2>Screen Illustrations</h2>
                         <p>Design</p>
                     </a>
                 </li>
                 <li> 
                     <a>
-                        <img src="images/img(9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
+                        <img src="./images/img(9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
                         <h2>Online Courses</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a>
-                        <img src="images/img(3).jpg" alt="Catalog" width="360" height="420">
+                        <img src="./images/img(3).jpg" alt="Catalog" width="360" height="420">
                         <h2>Instagram Stories Concept</h2>
                         <p>design</p>
                     </a>
                 </li>
                 <li>
                     <a>
-                        <img src="images/img(1)(1).jpg" alt="Lady with her grosseries" width="360" height="420">
+                        <img src="./images/img(1)(1).jpg" alt="Lady with her grosseries" width="360" height="420">
                         <h2>Organic Food</h2>
                         <p>Web Site</p>
                     </a>
                 </li>
                 <li> 
                     <a>
-                    <img src="images/img (2)(1).jpg" alt="Adding milk to coffee" width="360" height="420">
+                    <img src="./images/img (2)(1).jpg" alt="Adding milk to coffee" width="360" height="420">
                         <h2>Fresh Coffee</h2>
                         <p>Web Site</p>
                     </a>
