--- a/portfolio.html
+++ b/portfolio.html
@@ -48,56 +48,56 @@
                     <a class="link" >
                         <img src="./images/secondphoto.jpg" alt="scanning" width="360" height="420">
                         <h2 class="headertwo">Cashless Payment</h2>
-                        <p class="p1">Marketing</p>
+                        <p class="pp1">Marketing</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link"> 
                         <img src="./images/thirdphoto.jpg" alt="Mac and iphone x" width="360" height="420">
                         <h2 class="headertwo">Meditation App</h2>
-                        <p class="p1">App</p>
+                        <p class="pp1">App</p>
                     </a>
                 </li>
                 <li>
                     <a class="link">
                         <img src="./images/fourthphoto.jpg" alt="Driver in car" width="360" height="420">
                         <h2 class="headertwo">Taxi Service</h2>
-                        <p>Marketing</p>
+                        <p class="pp1">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/eightphoto.jpg" alt="Scanning code qr" width="360" height="420">
                         <h2 class="headertwo">Screen Illustrations</h2>
-                        <p>Design</p>
+                        <p class="pp1">Design</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                         <img src="./images/ninephoto.jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
                         <h2 class="headertwo">Online Courses</h2>
-                        <p>Marketing</p>
+                        <p class="pp1">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/tenphoto.jpg" alt="Catalog" width="360" height="420">
                         <h2 class="headertwo">Instagram Stories Concept</h2>
-                        <p>Design</p>
+                        <p class="pp1">Design</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/elevenphoto.jpg" alt="Lady with her grosseries" width="360" height="420">
                         <h2 class="headertwo">Organic Food</h2>
-                        <p>Web Site</p>
+                        <p class="pp1" >Web Site</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                     <img src="./images/twelvephoto.jpg" alt="Adding milk to coffee" width="360" height="420">
                         <h2 class="headertwo">Fresh Coffee</h2>
-                        <p>Web Site</p>
+                        <p class="pp1">Web Site</p>
                     </a>
                 </li>
             </ul>
