--- a/portfolio.html
+++ b/portfolio.html
@@ -41,63 +41,63 @@
                     <a class="link">
                         <img src="./images/firstphoto.jpg" alt="purple overlap" width="360" height="420">
                         <h2 class="headertwo">Banking App Interface Concept</h2>
-                        <p class="ppp">App</p>
+                        <p class="classp">App</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/secondphoto.jpg" alt="scanning" width="360" height="420">
                         <h2 class="headertwo">Cashless Payment</h2>
-                        <p class="ppp">Marketing</p>
+                        <p class="classp">Marketing</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link"> 
                         <img src="./images/thirdphoto.jpg" alt="Mac and iphone x" width="360" height="420">
                         <h2 class="headertwo">Meditation App</h2>
-                        <p class="ppp">App</p>
+                        <p class="classp">App</p>
                     </a>
                 </li>
                 <li>
                     <a class="link">
                         <img src="./images/fourthphoto.jpg" alt="Driver in car" width="360" height="420">
                         <h2 class="headertwo">Taxi Service</h2>
-                        <p class="ppp">Marketing</p>
+                        <p class="classp">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/eightphoto.jpg" alt="Scanning code qr" width="360" height="420">
                         <h2 class="headertwo">Screen Illustrations</h2>
-                        <p class="ppp">Design</p>
+                        <p class="classp">Design</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                         <img src="./images/ninephoto.jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
                         <h2 class="headertwo">Online Courses</h2>
-                        <p class="ppp">Marketing</p>
+                        <p class="classp">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/tenphoto.jpg" alt="Catalog" width="360" height="420">
                         <h2 class="headertwo">Instagram Stories Concept</h2>
-                        <p class="ppp">Design</p>
+                        <p class="classp">Design</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/elevenphoto.jpg" alt="Lady with her grosseries" width="360" height="420">
                         <h2 class="headertwo">Organic Food</h2>
-                        <p class="ppp" >Web Site</p>
+                        <p class="classp" >Web Site</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                     <img src="./images/twelvephoto.jpg" alt="Adding milk to coffee" width="360" height="420">
                         <h2 class="headertwo">Fresh Coffee</h2>
-                        <p class="ppp">Web Site</p>
+                        <p class="classp">Web Site</p>
                     </a>
                 </li>
             </ul>
