--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
         <section class="firstsectionportfolio">
             <h1 class="headerone">naglowek</h1>
             <ul class="list">
-                <li><button class="przycisk1" type="button">All</button></li>
-                <li><button class="przycisk1" type="button">Web Site</button></li>
-                <li><button class="przycisk1" type="button">App</button></li>
-                <li><button class="przycisk1" type="button">Design</button></li>
-                <li><button class="przycisk1" type="button">Marketing</button></li>
+                <li><button class="przycisk" type="button">All</button></li>
+                <li><button class="przycisk" type="button">Web Site</button></li>
+                <li><button class="przycisk" type="button">App</button></li>
+                <li><button class="przycisk" type="button">Design</button></li>
+                <li><button class="przycisk" type="button">Marketing</button></li>
             </ul>
                 <ul class="list">
                 <li>
