--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,15 @@
         </address>
     </header>
     <main>
+
         <section class="firstsectionportfolio">
             <h1 class="headerone">naglowek</h1>
             <ul class="list">
-                <li><button class="przycisk" type="button">All</button></li>
-                <li><button class="przycisk" type="button">Web Site</button></li>
-                <li><button class="przycisk" type="button">App</button></li>
-                <li><button class="przycisk" type="button">Design</button></li>
-                <li><button class="przycisk" type="button">Marketing</button></li>
+                <li><button class="button" type="button">All</button></li>
+                <li><button class="button" type="button">Web Site</button></li>
+                <li><button class="button" type="button">App</button></li>
+                <li><button class="button" type="button">Design</button></li>
+                <li><button class="button" type="button">Marketing</button></li>
             </ul>
                 <ul class="list">
                 <li>
